first draft of MemorySegment-based integer vector